<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10dp"
    tools:context=".ui.fragments.ProfileDetailsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/profile_details"
            android:layout_margin="@dimen/_10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"/>
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:padding="@dimen/_10dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginVertical="@dimen/_10dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/circle_shape"
            android:backgroundTint="@color/white"
            android:textStyle="bold"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_20sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="match_parent"
        android:padding="@dimen/_10dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginVertical="@dimen/_10dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/circle_shape"
        android:backgroundTint="@color/red"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sp"/>
</LinearLayout>